Fixed the Navbar with proper alignment and links

--- a/frontend/src/app/__components/user/register/registering/registering.component.css
+++ b/frontend/src/app/__components/user/register/registering/registering.component.css
@@ -85,3 +85,11 @@
     left: 0;
     font-size: 12px;
 }
+
+.show-hide-message
+{
+    margin: auto;
+    top:0;
+    padding: 0;
+    font-size: 12px;
+}
